--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.27.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
@@ -53,7 +54,8 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4",
 		"vitest": "^3.2.3",
-		"vitest-browser-svelte": "^0.1.0"
+		"vitest-browser-svelte": "^0.1.0",
+		"zod": "^3.25.76"
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^2.0.2",
